--- a/index.html
+++ b/index.html
@@ -355,6 +355,28 @@
     document.addEventListener("contextmenu", function (e) {
       e.preventDefault();
     });
+
+    // Blokir klik kanan
+    document.addEventListener("contextmenu", function(e) {
+      e.preventDefault();
+    });
+
+    // Blokir shortcut DevTools
+    document.addEventListener("keydown", function(e) {
+      // F12
+      if (e.key === "F12") {
+        e.preventDefault();
+      }
+      // Ctrl+U
+      if (e.ctrlKey && e.key.toLowerCase() === "u") {
+        e.preventDefault();
+      }
+      // Ctrl+Shift+I atau Ctrl+Shift+J
+      if (e.ctrlKey && e.shiftKey && 
+          (e.key.toLowerCase() === "i" || e.key.toLowerCase() === "j")) {
+        e.preventDefault();
+      }
+    });
   </script>
 </body>
 </html>
